[tool.poetry]
name = "wikidspark"
version = "0.2.1"
description = "Wikidspark is an API for querying the Wikidata item database, allowing uses to search either directly by name or ID, or construct SPARQL queries"
authors = ["Kristian Zarebski <krizar312@gmail.com>"]
license = "GPL-v3"
include = ['README.md', 'LICENSE', 'wikidspark/wikidata/properties.json']
exclude = ['wikidspark/wikidata/_upload.py']

[tool.poetry.dependencies]
python ="^3.8,<4.0"
wikipedia = "^1.4.0"
tqdm = "^4.48.2"
pandas = "^1.4.1"
urllib3 = "^1.26.9"
click = "^8.1.2"
html-to-json = "^2.0.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.20.0"
black = "^22.6.0"
unimport = "^0.9.6"
isort = "^5.10.1"
prospector = {extras = ["pyroma"], version = "^1.7.7"}
pyroma = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
