[tool.poetry]
name = "wikidspark"
version = "0.3.0"
description = "Wikidspark is an API for querying the Wikidata item database, allowing uses to search either directly by name or ID, or construct SPARQL queries"
authors = ["Kristian Zarębski <krizar312@gmail.com>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wikipedia = "^1.4.0"
tqdm = "^4.67.1"
click = "^8.1.8"
html-to-json = "^2.0.0"
pandas = "^2.2.3"
urllib3 = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
